# Trajectory

./: CMakeLists.txt  CMakeListsNikita.txt  CMakeSettings.json  README.md  STL.h  arc.cpp  arc.h  config.cpp  config.h  config.txt  construct_graph.cpp  construct_graph.h  dijkstra.cpp  dijkstra.h  document.tex  graphe.cpp  graphe.h  includes.h  input.txt  main.cpp  no_graph.cpp  no_graph.h  obstacle.cpp  obstacle.h  optimal_path.cpp  optimal_path.h  output.txt  read_map.cpp  read_map.h  segment.cpp  segment.h  sommet.cpp  sommet.h
Visualisation/: graphics.m
examples/: input.txt
test/: tests.cpp
visualization/: findSection.m  graphics.m
